@@ -146,21 +146,24 @@ int bytes_returned;
 static void logger_term(void *arg __attribute__ ((unused)) )
 {
 
-    obtain_lock(&logger_lock);
+    if(logger_active)
+    {
+        obtain_lock(&logger_lock);
 
-    /* Redirect all output to stderr */
-    dup2(STDERR_FILENO, STDOUT_FILENO);
+        /* Redirect all output to stderr */
+        dup2(STDERR_FILENO, STDOUT_FILENO);
 
-    /* Mark logger inactive */
-    logger_active = 0;
+        /* Mark logger inactive */
+        logger_active = 0;
 
-    /* Send the logger a message to wake it up */
-    fprintf(sysblk.syslog[LOG_WRITE], _("HHCLG014I logger thread terminating\n") );
+        /* Send the logger a message to wake it up */
+        fprintf(sysblk.syslog[LOG_WRITE], _("HHCLG014I logger thread terminating\n") );
 
-    /* Wait for the logger to terminate */
-    wait_condition(&logger_cond, &logger_lock);
+        /* Wait for the logger to terminate */
+        wait_condition(&logger_cond, &logger_lock);
 
-    release_lock(&logger_lock);
+        release_lock(&logger_lock);
+    }
 }
 
 
