@@ -1,3 +1,4 @@
+30 Jun 2003 Removed incorrect locks in console attach/detach - Jan Jaeger
 29 Jun 2003 Added shutdown logic - Jan Jaeger
 28 Jun 2003 Fix "console: select: Bad file number" - Fish
 28 Jun 2003 Updated hercinst.html with panel command info - Fish
